# Android-Advanced

./: README.md
HiltDemo/: .gitignore  ReadME  build.gradle
HiltDemo/app/: build.gradle
HiltDemo/app/src/androidTest/java/com/noway/hilt/: ExampleInstrumentedTest.java
HiltDemo/app/src/main/: AndroidManifest.xml
HiltDemo/app/src/main/java/com/noway/hilt/: MainActivity.java  MyApplication.java  SecActivity.java
HiltDemo/app/src/main/res/layout/: activity_main.xml
HiltDemo/app/src/test/java/com/noway/hilt/: ExampleUnitTest.java
IdCardRec/: settings.gradle
IdCardRec/app/: build.gradle
IdCardRec/app/src/main/: AndroidManifest.xml
IdCardRec/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
IdCardRec/app/src/main/res/values/: strings.xml  themes.xml
IdCardRec/app/src/main/res/values-night/: themes.xml
LiveData/: settings.gradle
LiveData/app/: build.gradle
LiveData/app/src/main/: AndroidManifest.xml
LiveData/app/src/main/res/layout/: activity_main.xml
LiveData/livedatabus/: build.gradle
LiveData/livedatabus/src/main/: AndroidManifest.xml
LiveData/livedatabus/src/main/res/layout/: activity_live_bus.xml  activity_live_bus_x.xml  activity_main.xml  activity_sec2.xml
MyGlide/: settings.gradle
MyGlide/app/: build.gradle
MyGlide/app/src/main/: AndroidManifest.xml
MyGlide/app/src/main/res/layout/: activity_main2.xml
MyGlide/gradle/wrapper/: gradle-wrapper.properties
MyGlide/lib-glide/src/main/: AndroidManifest.xml
NetSocket/BIO/src/: BIO介绍  Client.java  Client2.java  Server.java  ServerPool.java
(+50 files in other folders)
